# rf-mcp-reloaded

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-1-initialize-the-project-from-the-selected-starter-template.md  1-2-publish-contributor-bootstrap-rules-and-workspace-package-scaffolds.md  (+21 more)
docs/: browser-library-flagship-repair.md  compass_artifact_wf-cfd59c3b-036d-4b2a-9ce2-522e9727a1c9_text_markdown.md  contract-evolution.md  contracts.md  deep-research-report (8).md  existing-artifact-refactor.md  mcp-live-repair-boundary.md  project-structure.md  repair-diagnostics.md  runnable-test-generation.md
scripts/: benchmark_snapshot_and_delta.py  export_json_schemas.py  run_epic3_benchmark_pack.py  run_epic5_live_mcp_proof.py  verify_bootstrap_env.py  verify_schema_sync.py  verify_workspace_structure.py
tests/: test_batching_suggestions_shadow_probe.py  test_browser_library_flagship_repair_workflow.py  test_cross_review_improvements.py  test_epic3_benchmark_pack.py  test_generation_and_refactor_skill_definitions.py  test_generation_workflow.py  test_grounding_and_scaffolding.py  test_live_mcp_repair_proof.py  test_mcp_live_repair_surface.py  test_mcp_live_session_surface.py  test_policy_and_events.py  test_refactor_workflow.py  test_repair_diagnostics_and_hints.py  test_rf_manage_session.py  test_robot_authoring.py  test_schema_sync.py  test_session_versioning_and_export.py  test_shadow_piercing_helper.py  test_validate_command.py  test_verify_bootstrap_env.py  test_verify_workspace_structure.py
(+102 files in other folders)
